--- a/client/index.html
+++ b/client/index.html
@@ -37,21 +37,35 @@
 
                 <div v-if="page == 'game'">
                     <div class="box">
-                        <h1 class="title">Hallo {{ player.name }}</h1>
+                        <h1 class="title is-4">Hallo {{ player.name }}!</h1>
 
                         <div class="buttons" v-if="player.pokemons.length < pokemonsMax">
-                            <button class="button is-link is-large" @click.prevent="randomPokemon">Random pokemon</button>
+                            <button class="button is-link" @click.prevent="randomPokemon">Catch random pokemon</button>
                         </div>
-                    </div>
+                        <hr>
 
-                    <div class="box">
-                        <h2 class="title is-3">Jouw pokemons ({{ player.pokemons.length }} / {{ pokemonsMax }})</h2>
+                        <h2 class="title is-4">Jouw pokemons ({{ player.pokemons.length }} / {{ pokemonsMax }})</h2>
 
                         <div class="columns is-multiline">
                             <div class="column is-one-quarter" v-for="pokemon in player.pokemons" :key="pokemon.uniqueId">
-                                <pokemon-item :pokemon="pokemon" />
+                                <pokemon-item :player="player" :pokemon="pokemon" />
                             </div>
                         </div>
+                    </div>
+
+                    <div class="box" v-if="player.admin">
+                        <h2 class="title is-4">(ADMIN) Beheer andere verbonden spelers</h2>
+                        <div v-if="otherPlayers.length > 0">
+                            <div class="box" v-for="otherPlayer in otherPlayers" :key="otherPlayer.id">
+                                <h3 class="title is-4">{{ otherPlayer.name }}'s pokemons ({{ otherPlayer.pokemons.length }} / {{ pokemonsMax }})</h3>
+                                <div class="columns is-multiline">
+                                    <div class="column is-one-quarter" v-for="pokemon in otherPlayer.pokemons" :key="pokemon.uniqueId">
+                                        <pokemon-item :player="player" :pokemon="pokemon" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <p v-else><i>Er zijn op dit moment geen andere spelers verbonden</i></p>
                     </div>
                 </div>
             </div>
@@ -81,6 +95,10 @@
                 <p>Levenspunten: <b>{{ pokemon.currentHealth }} / {{ pokemon.health }}</b></p>
                 <p>Aanvalspunten: <b>{{ pokemon.attack }}</b></p>
                 <p>Verdedigingspunten: <b>{{ pokemon.defense }}</b></p>
+            </div>
+
+            <div class="card-footer" v-if="player.admin">
+                <a href="#" @click.prevent="revivePokemon" class="card-footer-item">Revive</a>
             </div>
 
             <div :class="{ modal: true, 'is-active': isDeleting }">
