--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,9 @@
     <title>Pokemon Catcher</title>
     <link rel="shortcut icon" href="data:,">
     <link rel="stylesheet" href="css/bulma.min.css">
+    <link rel="stylesheet" href="css/leaflet.min.css">
     <script src="js/vue.min.js"></script>
+    <script src="js/leaflet.min.js"></script>
 </head>
 <body>
     <div id="app">
@@ -41,7 +43,7 @@
 
                 <div v-if="page == 'game' && tracking">
                     <div class="box">
-                        <h1 class="title is-4">Hallo {{ player.name }}!</h1>
+                        <h1 class="title is-3">Hallo {{ player.name }}!</h1>
                         <p class="my-3">Begin met lopen van je tocht, als je in de buurt komt van een Pokemon Spawn krijg je de mogelijkheid om een pokemon te vangen</p>
                         <div class="buttons" v-if="player.pokemons.length < pokemonsMax && pendingSpawns.length > 0">
                             <button class="button is-link is-large" @click="catchFirstSpawn" style="width: 100%;">Je ziet een pokemon, vang hem!</button>
@@ -58,10 +60,20 @@
                     </div>
 
                     <div v-if="player.admin" class="box">
-                        <h2 class="title is-4">Het admin paneel</h2>
+                        <h2 class="title is-3">Het admin paneel</h2>
+
+                        <h3 class="title is-4">Spawners</h3>
+                        <div class="mb-5" style="padding-top: 50%; position: relative;">
+                            <div ref="spawnsMap" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0;"></div>
+                        </div>
+
                         <div v-if="otherPlayers.length > 0">
+                            <h3 class="title is-4">Andere verbonden spelers</h3>
                             <div class="box" v-for="otherPlayer in otherPlayers" :key="otherPlayer.id">
-                                <h3 class="title is-4">{{ otherPlayer.name }}</h3>
+                                <h3 class="title is-4">
+                                    {{ otherPlayer.name }}
+                                    <span class="tag is-danger ml-3" v-if="otherPlayer.admin">ADMIN</span>
+                                </h3>
                                 <div class="columns">
                                     <div class="column">
                                         <div class="field has-addons">
