--- a/client/index.html
+++ b/client/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title>Pokemon Catcher</title>
-    <link rel="shortcut icon" href="data:,">
-    <link rel="stylesheet" href="css/bulma.min.css">
-    <link rel="stylesheet" href="css/leaflet.min.css">
-    <script src="js/vue.min.js"></script>
-    <script src="js/leaflet.min.js"></script>
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/icon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/icon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="stylesheet" href="/css/bulma.min.css">
+    <link rel="stylesheet" href="/css/leaflet.min.css">
+    <script src="/js/vue.min.js"></script>
+    <script src="/js/leaflet.min.js"></script>
 </head>
 <body>
     <div id="app">
@@ -72,7 +77,7 @@
                                 <div ref="pokemonItem" style="width: 50%; min-width: 256px; margin: 0 auto; transform: scale(0);">
                                     <pokemon-item :player="player" :pokemon="player.pokemons[0]" :actions="false" />
                                 </div>
-                                <img ref="pokemonBall" src="images/pokemon-ball.png" style="position: absolute; top: 0; left: 50%; width: 256px; height: 256px; transform: translate(-50%, 50%) scale(0);">
+                                <img ref="pokemonBall" src="/images/icon-512x512.png" style="position: absolute; top: 0; left: 50%; width: 256px; height: 256px; transform: translate(-50%, 50%) scale(0);">
                             </div>
 
                             <div class="modal-card-foot">
@@ -86,7 +91,7 @@
 
                         <h3 class="title is-4">Spawners</h3>
                         <div class="mb-5" style="padding-top: 50%; position: relative;">
-                            <div ref="spawnsMap" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0;"></div>
+                            <div ref="spawnsMap" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background-color: #000;"></div>
                         </div>
 
                         <h3 class="title is-4">Andere verbonden spelers</h3>
@@ -146,7 +151,7 @@
 
     <template id="pokemon-item-template">
         <div class="card">
-            <div class="card-image pokemon-image" :style="`padding-top: 100%; background-image: url('images/pokemons/${pokemon.id}.png');  background-size: cover; background-position: center center;`"></div>
+            <div class="card-image pokemon-image" :style="`padding-top: 100%; background-image: url('/images/pokemons/${pokemon.id}.png');  background-size: cover; background-position: center center;`"></div>
             <div style="background-color: #f00">
                 <div :style="`width: ${ pokemon.currentHealth / pokemon.health * 100}%; height: 8px; background-color: #0b0;`"></div>
             </div>
