--- a/client/index.html
+++ b/client/index.html
@@ -50,7 +50,7 @@
                     <div class="box">
                         <h1 class="title is-3">Hallo {{ player.name }}!</h1>
                         <p class="my-3">Begin met lopen van je tocht, als je in de buurt komt van een Pokemon Spawn krijg je de mogelijkheid om een pokemon te vangen</p>
-                        <div class="buttons" v-if="player.pokemons.length < pokemonsMax && pendingSpawns.length > 0">
+                        <div class="buttons" v-if="player.pokemons.length < pokemonsMax && (player.admin || pendingSpawns.length > 0)">
                             <button class="button is-link is-large is-fullwidth" @click="isCatching = true, hasCatched = false">Je ziet een pokemon!</button>
                         </div>
 
@@ -141,8 +141,10 @@
 
         <div class="footer">
             <div class="container content">
-                <p v-if="connected" class="has-text-success-dark"><b>Verbonden met de server 😀</b></p>
-                <p v-else class="has-text-danger-dark"><b>Niet verbonden met de server 😭</b></p>
+                <div v-if="page != 'connecting'" class="mb-3">
+                    <p v-if="connected" class="has-text-success-dark"><b>Verbonden met de game server 😀</b></p>
+                    <p v-else class="has-text-danger-dark"><b>Niet verbonden met de game server 😭</b></p>
+                </div>
                 <p>Gemaakt door <a href="https://youtu.be/dQw4w9WgXcQ?t=43" target="_blank">Bagheera</a> van de Die Kantanky's</p>
                 <p>Voor de broncode check <a href="https://github.com/bplaat/pokemon-catcher" target="_blank">GitHub</a></p>
             </div>
